# med-buddy

./: .gitignore  Makefile  README.MD  README.md  main.py  pyproject.toml  util.py
backend/: index.js  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
backend/src/api/: auth.ts  files.ts  genai.ts  healthcheck.ts
backend/src/lib/: config.ts  db.ts  logger.ts  storage.ts  utils.ts
frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-old/: package-lock.json
frontend-old/src/pages/: _app.js
frontend/src/pages/: _app.tsx  chat.tsx  dashboard.tsx  files.tsx  index.js  index.tsx  login.tsx  register.tsx  summary.tsx
legacy-be/: main.py  pyproject.toml
