[tool.poetry]
name = "major-proj"
version = "0.1.0"
description = ""
authors = ["shawshankkumar <shashankkumarthakur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
black = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
